[tool.poetry]
name = "python-project-49"
version = "0.1.0"
description = ""
authors = ["teglev <teglev.sky@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
